Revert "#1 Make logging compatible with systemd version <236"
This reverts commit 15a000f33797eb30192e829166268ab92ac3c3f3.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -45,7 +45,7 @@ alertmanager_logger_service_state: started
 # More information at https://www.freedesktop.org/software/systemd/man/systemd.exec.html#StandardOutput=
 alertmanager_logger_log_path: /var/log/alertmanager_logger
 alertmanager_logger_log_file: logger.log
-# alertmanager_logger_log_output: "{% if alertmanager_logger_log_file is defined %} file:{{ alertmanager_logger_log_path }}/{{ alertmanager_logger_log_file }} {% else %} journal {% endif %}"
+alertmanager_logger_log_output: "{% if alertmanager_logger_log_file is defined %} file:{{ alertmanager_logger_log_path }}/{{ alertmanager_logger_log_file }} {% else %} journal {% endif %}"
 
 # Flags
 alertmanager_logger_port: 6725 #default
